src/Tests/Error/TypeCallableError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeCallableError extends AssertError
{
}
